# xmastree

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  bump-info.json  coco-dev  make_palette.sh  my_palette.txt  package.json  pyproject.toml
.devcontainer/: devcontainer.json  post-create-command.sh
.github/workflows/: build.yml  bump-version.yml  make-release.yml
assets/: aif.xmt  app-palette.txt
assets/acorn/: 1.acorn  10.acorn  11.acorn  2.acorn  3.acorn  4.acorn  5.acorn  7.acorn  8.acorn  9.acorn  b1-l2.acorn  b1-r1.acorn  b1-r2.acorn  b2-r1.acorn
assets/mame-cfgs/: coco3.cfg
cmoc_os9/: CGFX Reference.md  Krider C Lib Reference.md
cmoc_os9/cgfx/: Makefile  cbuffer.as  cgfx.docs  config.c  draw.c  getput.c  gtext.c  keyboard.c  mv_window.c  nobuffer.as  opt.c  text.c
cmoc_os9/cgfx/include/: cgfx.h
cmoc_os9/cgfx/todo/: dialog.c  fname.c  menuxy.c  mousekey.c  mvfname.c
cmoc_os9/include/: fcntl.h  os.h  stdbool.h  stdio.h  stdlib.h  string.h  unistd.h
cmoc_os9/lib/: Makefile  abs.c  access.c  atof.c  atoi.c  atol.c  attr.c  case.as  ccdiv.as  ccmod.as  ccmult.as  cfinish.c  cfloats.as  claddsub.as  clbits.as  clcommon.as  clcompare.as  clconvert.as  cldiv.as  clincdec.as  clmove.as  clmul.as  clnegcompl.as  clshifts.as  create.c  debug.c  fcommon.as  fseek.c  hstrings.c  htoi.as  htol.as  id.c  index.c  io.c  mem.c  memccpy.c  memchr.c  memcmp.c  memcpy.c  memncmp.c  (+34 more)
cmoc_os9/lib/todo/: _prgname.as  abort.as  access.as  adump.as  bsearch.as  calloc.as  case.as  chown.as  cshifts.as  datmods.as  defdrive.as  devtyp.as  dir.as  dirutil.as  errmsg.as  fflush.as  findstr.as  fread.as  ftelldummy.as  fwrite.as  getc.as  getopt.as  gets.as  gs1.as  gs2.as  intercept.as  l3tol.as  ltoa.as  ltol3.as  minmax.as  misc.as  mktemp.as  pffdummy.as  pffinit.as  pfldummy.as  pflinit.as  popen.as  prof.as  profdummy.as  pwcryp.as  (+15 more)
disks/: NOS9_6809_L2_v030300_coco3_80d.dsk  NOS9_6809_L2_v030300_coco3_80d.dsk~
tests/: conftest.py  test_png_to_mvicon.py  test_png_utilities.py
tests/fixtures/images/: branch.i09  branch_mask0.i09  branch_mask2.i09  icon.xmt
tests/fixtures/palettes/: b-too-big-palette.txt  bad-line-palette.txt  default-palette.txt  duplicate-line-palette.txt  g-too-big-palette.txt  index-too-big-palette.txt  invalid-line-palette.txt  partial-palette.txt  r-too-big-palette.txt  xmas-palette.txt
xmastree/: app.c  app.h  document.c  document.h  image.c  image.h  toolbox.c  toolbox.h  tree.c  tree.h  tree_view.c  tree_view.h  undo_manager.c  undo_manager.h  version.h  xmastree.c
xmastree_utilities/: png_to_mvicon.py  png_utilities.py
